<resources>
    <string name="app_name">SDDiam</string>

    <string name="btn_ok">OK</string>
    <string name="connection_title">No Internet connection</string>
    <string name="connection_not_available">It seems that you are not connected to the Internet. Kindly check your network settings.</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text_signin">Sign In</string>
    <string name="hint_appointment">Book an Appointment</string>
    <string name="create_account">Sign Up</string>
    <string name="account">Don\'t have an account?</string>
    <string name="singup_account">Already have an account?</string>
    <string name="err_email">Enter email address</string>
    <string name="err_email_invalid">Invalid email address</string>
    <string name="err_password">Enter password</string>
    <string name="err_conf_password">Confirm password</string>
    <string name="err_password_limit">Password must be at least 5 characters long</string>
    <string name="err_password_match">Password does not match</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_company">Company Name</string>
    <string name="hint_country">Select Country</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_view">View</string>
    <string name="hint_user_name">User name</string>
    <string name="err_user_name">Enter User Name</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_contact_no">Contact No.</string>
    <string name="hint_location">Location</string>
    <string name="btn_signup">Sign up</string>
    <string name="err_firstname">Enter First Name</string>
    <string name="err_lastname">Enter Last Name</string>
    <string name="err_company_name">Enter Company Name</string>
    <string name="err_pin">Invalid pin</string>
    <string name="err_busine_type">Select business type</string>
    <string name="err_country">Select Country</string>
    <string name="err_city">Enter City</string>
    <string name="err_contact_no">Enter Contact Number</string>
    <string name="err_invalid_contact_no">Invalid Contact Number</string>
    <string name="btn_send_request">Send Request</string>
    <string name="select_country">Select Country</string>
    <string name="search_country">Search Country</string>
</resources>
