<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.40"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_weight="0.60"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_textview_boader"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_40sdp"
                                android:adjustViewBounds="true"
                                android:src="@drawable/icon_bg" />

                            <ImageView
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:layout_centerInParent="true"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/ic_user" />

                        </RelativeLayout>


                        <com.oozeetech.sddiam.widget.DEditText
                            android:id="@+id/editLoginEmail"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@null"
                            android:hint="@string/hint_username"
                            android:paddingLeft="@dimen/_10sdp"
                            android:paddingRight="@dimen/_5sdp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/c_B2B2B2"
                            android:textSize="@dimen/_12sdp"
                            app:textFontFace="REGULAR" />

                    </LinearLayout>


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_15sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_textview_boader"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_40sdp"
                                android:adjustViewBounds="true"
                                android:src="@drawable/icon_bg" />

                            <ImageView
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:layout_centerInParent="true"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/ic_lock" />

                        </RelativeLayout>


                        <com.oozeetech.sddiam.widget.DEditText
                            android:id="@+id/editLoginPass"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@null"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:paddingLeft="@dimen/_10sdp"
                            android:paddingRight="@dimen/_5sdp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/c_B2B2B2"
                            android:textSize="@dimen/_12sdp"
                            app:textFontFace="REGULAR" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">

                        <com.oozeetech.sddiam.widget.DTextView
                            android:id="@+id/tvForgotPass"
                            style="@style/txt_black_14"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/forgot_password"
                            app:textFontFace="REGULAR" />

                    </LinearLayout>

                    <com.oozeetech.sddiam.widget.MaterialButton
                        android:id="@+id/btnLogin"
                        style="@style/LightFlatWaveColorButtonRippleStyle_"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/bg_button_fill_primary"
                        android:text="@string/text_signin"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        app:textFontFace="MEDIUM" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.oozeetech.sddiam.widget.DTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:singleLine="true"
                            android:text="@string/account"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            app:textFontFace="REGULAR" />

                        <com.oozeetech.sddiam.widget.DTextView
                            android:id="@+id/tvCreateAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:gravity="right"
                            android:singleLine="true"
                            android:text="@string/create_account"
                            android:textColor="@color/primary"
                            android:textSize="@dimen/_14sdp"
                            app:textFontFace="REGULAR" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>